<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="76dp"
            android:layout_height="41dp"
            android:layout_marginStart="24dp"
            android:text="@string/entry_title"
            style="@style/label"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintRight_toLeftOf="@+id/input_title"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="137dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:text="@string/entry_category"
            style="@style/label"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/subcategory"
            app:layout_constraintRight_toLeftOf="@+id/input_category"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/subcategory"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:text="@string/entry_subcategory"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_calendar"
            app:layout_constraintRight_toLeftOf="@+id/input_subcategory"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <EditText
            android:id="@+id/input_title"
            android:layout_width="292dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:layout_editor_absoluteX="105dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/input_category" />

        <Spinner
            android:id="@+id/input_category"
            android:layout_width="184dp"
            android:layout_height="51dp"
            android:layout_marginEnd="24dp"
            tools:layout_editor_absoluteX="211dp"
            android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/input_subcategory" />

        <Spinner
            android:id="@+id/input_subcategory"
            android:layout_width="181dp"
            android:layout_height="48dp"
            tools:layout_editor_absoluteX="214dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_calendar" />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="357dp"
            android:layout_height="194dp"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteY="327dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/btn_pictures"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:layout_editor_absoluteY="265dp"
            app:layout_constraintRight_toLeftOf="@+id/btn_location"
            android:layout_marginRight="24dp" />

        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_today"
            tools:layout_editor_absoluteY="265dp"
            tools:layout_editor_absoluteX="294dp" />

        <ImageButton
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            app:srcCompat="@android:drawable/ic_menu_mylocation"
            tools:layout_editor_absoluteY="265dp"
            app:layout_constraintRight_toLeftOf="@+id/btn_friends"
            android:layout_marginRight="24dp" />

        <ImageButton
            android:id="@+id/btn_friends"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            app:srcCompat="@android:drawable/ic_menu_myplaces"
            tools:layout_editor_absoluteY="265dp"
            app:layout_constraintRight_toLeftOf="@+id/btn_calendar"
            android:layout_marginRight="24dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            tools:layout_editor_absoluteX="223dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            tools:layout_editor_absoluteX="45dp"
            style="@style/ButtonRed"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="horizontal" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>