<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.pocketdiary.ShowEntryScreen"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/title"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/category"
        app:layout_constraintRight_toLeftOf="@+id/out_title"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/category"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_category"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/out_category"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/subcategory"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_date"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/out_date"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/entry_friends"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintRight_toLeftOf="@+id/out_friends"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_address"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/subcategory"
        app:layout_constraintRight_toLeftOf="@+id/out_address"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView3"
        style="@style/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entry_subcategory"
        app:layout_constraintLeft_toLeftOf="@+id/subcategory"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintRight_toLeftOf="@+id/out_subcategory"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/out_title"
        style="@style/simple_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/out_category"
        app:layout_constraintRight_toRightOf="@+id/out_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/out_category"
        style="@style/simple_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/out_subcategory"
        app:layout_constraintRight_toRightOf="@+id/out_subcategory"
        app:layout_constraintTop_toBottomOf="@+id/out_title"
        app:layout_constraintVertical_bias="0.571"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/out_description"
        style="@style/simple_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:layout_marginTop="32dp"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/out_friends"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/out_friends"
        style="@style/simple_text"
        android:layout_width="168dp"
        android:layout_height="28dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/out_address"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintVertical_bias="0.833"
        android:maxLines = "1"
        android:scrollbars = "vertical"/>

    <TextView
        android:id="@+id/out_address"
        style="@style/simple_text"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/out_friends"
        app:layout_constraintRight_toRightOf="@+id/out_friends"
        app:layout_constraintTop_toBottomOf="@+id/out_date"
        app:layout_constraintVertical_bias="0.38"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/out_date"
        style="@style/simple_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/subcategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/out_address"
        app:layout_constraintRight_toRightOf="@+id/out_address"
        app:layout_constraintTop_toBottomOf="@+id/out_subcategory"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/out_subcategory"
        style="@style/simple_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/out_date"
        app:layout_constraintRight_toRightOf="@+id/out_date"
        app:layout_constraintTop_toBottomOf="@+id/out_category"
        app:layout_constraintVertical_bias="0.666"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp"
        tools:layout_editor_absoluteY="24dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintGuide_begin="17dp" />


</android.support.constraint.ConstraintLayout>